--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <link href="css/fonter/css/brands.css" rel="stylesheet">
     <link href ="css/fonter/css/solid.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title></title>
+    <title>Nettside</title>
 </head>
 <body>
     <header>
         <span>
-            <a href="index.html" id="Logo">Logo</a>
+            <a href="index.html" id="Logo"><i class="fa-solid fa-house"></i></a>
         </span>
         <nav>
             <ul>
 
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href ="produkt.html">Produkter</a></li>
-                <li><a href="fraktretur.html">Frakt og retur</a></li>
+                <li><a href="fraktretur.html">frakt og retur</a></li>
+                <i class="fa-solid fa-cart-shopping"></i>
             </ul>
         </nav>
      </header>
@@ -30,28 +31,22 @@
             <h2><a href ="produkt.html">Herre sneakers</a></h2>
             <article>
                 <img src="img/nike-5041716_640.jpg" alt="Bilde Herresneakers">
-                <h3>Image by grailify from pixabay</h3>
+                <h4>Image by <a href="https://pixabay.com/users/grailify-15961668/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5041716">grailify</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5041716">Pixabay</a></h4>
             </article>
             <article>
-                <h2><a href ="produkt.html">Damesneakers</a></a></h2>
-                <img src="img/shoes-2216498_640.jpg" alt="Bilde Damesneakers">
-                <h3>Image by Myriams-Fotos from pixabay</h3>
+                <h2><a href ="produkt.html">Damesneakers</a></h2>
+                <img src="img/shoes-2216498_1280.jpg" alt="Bilde Damesneakers">
+                <h4>Image by <a href="https://pixabay.com/users/myriams-fotos-1627417/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2216498">Myriams-Fotos</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2216498">Pixabay</a></h4>
                 
             </article>
                 <article>
-                    <h2><a href ="produkt.html">Barnesneakers</a></h2>
-                    <img src="img/childrens-shoes-3036292_640.jpg" alt="Bilde Barnesneakers">
-                    <h3>Image by Alexa from Pixabay</h3>
+                    <h2><a href ="produkt.html">Joggesko</a></h2>
+                    <img src="img/countryside-1846093_1280.jpg" alt="Joggesko">
+                    <h4>Image by <a href="https://pixabay.com/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1846093">Pexels</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1846093">Pixabay</a></h4>
                 </article>
-
-
-
-
-
-
         </section>
         <footer>
-            <li><a href = "fraktretur.html">Om oss</a></li>
+            <a href = "#"><i class="fa-solid fa-circle-user"></i></a>
         </footer>
      </main>
 
