--- a/fraktretur.html
+++ b/fraktretur.html
@@ -21,8 +21,9 @@
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href="produkt.html">Produkter</a></li>
                 <li><a href="fraktretur.html">frakt og retur</a></li>
-                <i class="fa-solid fa-cart-shopping"></i>
+                <li><i class="fa-solid fa-cart-shopping"></i></li>
             </ul>
+        </nav>
         </header>
             <ul>
                 <li>
@@ -54,9 +55,8 @@
                      </div>
                  </li>
               </ul>
-            </nav>
             <footer>
-                <a href = "#"><i class="fa-solid fa-circle-user"></i></a> 
+                <i class="fa-solid fa-circle-user"></i>
             </footer>
         
     
