--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         </span>
         <nav>
             <ul>
-
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href ="produkt.html">Produkter</a></li>
                 <li><a href="fraktretur.html">frakt og retur</a></li>
-                <i class="fa-solid fa-cart-shopping"></i>
+                <li><i class="fa-solid fa-cart-shopping"></i></li>
             </ul>
         </nav>
      </header>
@@ -46,7 +45,7 @@
                 </article>
         </section>
         <footer>
-            <a href = "#"><i class="fa-solid fa-circle-user"></i></a>
+           <i class="fa-solid fa-circle-user"></i>
         </footer>
      </main>
 
