endre h2 tagger til h3

--- a/produkt.html
+++ b/produkt.html
@@ -32,18 +32,18 @@
             <section class="default-flex">
                 <article>
                     <img src="img/nike-5041716_640.jpg" alt="Bilde 1" > 
-                    <h2>#</h2>
+                    <h3>Nike air max</h3>
                     <h4>Image by <a href="https://pixabay.com/users/grailify-15961668/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5041716">grailify</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5041716">Pixabay</a></h4>
                 </article>
 
                 <article>
                     <img src="img/shoes-2216498_1280.jpg" alt="Bilde 2">   
-                    <h2>#</h2> 
+                    <h3>Adidas</h3> 
                     <h4>Image by <a href="https://pixabay.com/users/myriams-fotos-1627417/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2216498">Myriams-Fotos</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2216498">Pixabay</a></h4>
                 </article>
                 <article>
                     <img src="img/countryside-1846093_1280.jpg" alt="Bilde 3"> 
-                    <h3>#</h3>
+                    <h3>Nike joggesko</h3>
                     <h4>Image by <a href="https://pixabay.com/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1846093">Pexels</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1846093">Pixabay</a></h4>
                  </article>   
            </section>
@@ -51,18 +51,18 @@
            <section class="default-flex">
             <article>
                     <img src="img/feet-1840619_1280.jpg" alt="Bilde 4" > 
-                    <h2>#</h2>
+                    <h3>Nike joggesko</h3>
                     <h4>Image by <a href="https://pixabay.com/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1840619">Pexels</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1840619">Pixabay</a></h4>
                 </article>
 
                 <article>
                     <img src="img/adidas-1853899_1280.jpg" alt="Bilde 5">   
-                    <h2>#</h2> 
+                    <h3>Adidas </h3> 
                     <h4>Image by <a href="https://pixabay.com/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1853899">Pexels</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1853899">Pixabay</a></h4>
                </article>
                <article>
                     <img src="img/adidas-2554690_1280.jpg" alt="Bilde 6"> 
-                    <h2>#</h2>
+                    <h3>Adidas joggesko</h3>
                     <h4>Image by <a href="https://pixabay.com/users/mbatty-611710/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2554690">MBatty</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2554690">Pixabay</a></h4>
                 </article>
              </section>
@@ -70,17 +70,17 @@
            <section class="default-flex">
              <article>
                     <img src="img/nike-5126389_1280.jpg" alt="Bilde 7" > 
-                    <h2>#</h2>
+                    <h3>Nike airforce</h3>
                     <h4>Image by <a href="https://pixabay.com/users/justcreativestock-16358620/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5126389">Marika Godwin</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5126389">Pixabay</a></h4>
              </article>
              <article>
                      <img src="img/kicks-2213619_1280.jpg" alt="Bilde 8">   
-                     <h2>#</h2> 
+                     <h3>Jordan</h3> 
                      <h4>Image by <a href="https://pixabay.com/users/publicco-5009832/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2213619">Public Co</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2213619">Pixabay</a></h4>
              </article>
              <article>
                     <img src="img/sneakers-3714730_1280.jpg" alt="Bilde 9"> 
-                    <h2>#</h2>
+                    <h3>Nike</h3>
                     <h4>Image by <a href="https://pixabay.com/users/starkvisuals-5983806/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3714730">Rodger Shija</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3714730">Pixabay</a></h4>
              </article>
             </section>
