Siste endringer innlevering
La til hjerteicon for favoritter

--- a/fraktretur.html
+++ b/fraktretur.html
@@ -21,6 +21,7 @@
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href="produkt.html">Produkter</a></li>
                 <li><a href="fraktretur.html">frakt og retur</a></li>
+                <li><i class="fa-regular fa-heart"></i></li>
                 <li><i class="fa-solid fa-cart-shopping"></i></li>
             </ul>
         </nav>
